# vibeguard-ai-analyzer

./: .editorconfig  .gitignore  Makefile  README.md  overview.md  plan.md  pyproject.toml  requirements-research.txt  sample_code.py  vibeguard-project-proposal.md
.github/workflows/: energy_linux.yml  tests.yml
benchmarks/: dataset.py  runner.py
corpus/: __init__.py  build.py  cweval_prompt.py  merge.py  schema.py
corpus/loaders/: __init__.py  cweval.py  cweval_synthetic.py  evalplus.py  humaneval.py  mbpp.py  sallm.py  secodeplt.py  security.py  securityeval.py
docs/: PAPER_DRAFT.md  REPRODUCIBILITY.md
experiments/: __init__.py  annotate_cweval.py  baselines.py  batch_tools.py  cwe_families.py  cwe_scoping.py  cweval_runner.py  generate_evalplus_ai.py  measure.py  metrics.py  rq3_evalplus_profile.py  rq6_secure_at_k.py  rq7_probe_accuracy.py  run_baselines.py  run_detection_study.py  run_energy.py  run_evalplus_prevalence.py  run_llm_repair.py  run_research_evaluation.py  run_sallm_baselines.py  run_securityeval_baselines.py  run_study.py  statistics.py
fixers/: __init__.py  base.py  engine.py  fix_assert.py  fix_file_permissions.py  fix_hardcoded_secret.py  fix_insecure_cookie.py  fix_insecure_random.py  fix_insecure_tmpfile.py  fix_membership_in_loop.py  fix_open_redirect.py  fix_path_traversal.py  fix_sql_injection.py  fix_ssrf.py  fix_string_concat.py  fix_subprocess_shell.py  fix_tls_verify.py  fix_weak_hash.py  fix_xpath_injection.py  fix_xss.py  fix_xxe.py  fix_yaml_load.py  llm_fixer.py  registry.py  safety.py
orchestrator/: __init__.py  api.py  chat.py  pipeline.py
paper/: references.bib  vibeguard_final.bbl  vibeguard_final.blg  vibeguard_final.tex
papers/: 2661_Is_Your_Code_Generated_by.md  3691621.3694934.md  CWEval.md
presentation/: slide_numbers_explained.md  slides.html  slides.md
samples/: security_showcase_vulnerable.py
sandbox/: __init__.py  main.py  probe_base.py  probe_registry.py  profiler.py  requirements.txt  sandbox_runner.py  scoring.py  security_prober.py  static_analyzer.py
scripts/: reproduce_paper.sh  reproduce_study.sh  run_energy_powermetrics.sh
security/: analyze.py  pipeline.py
tests/: test_chat.py  test_corpus_merge.py  test_cweval.py  test_dataset_loaders.py  test_dynamic.py  test_evalplus.py  test_fixers.py  test_fixers_v2.py  test_fixers_v3.py  test_metrics.py  test_probes.py  test_repair_evaluation.py  test_research.py  test_rules.py  test_rules_v2.py  test_run_energy.py  test_sallm.py  test_scanner.py  test_secodeplt.py  test_sprint2.py  test_statistics.py  test_taint.py
vibeguard/: analyze.py
vscode-extension/: .vscodeignore  package-lock.json  package.json
(+143 files in other folders)
