[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeguard"
version = "0.1.0"
description = "AI code quality, energy, and security analyzer"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
vibeguard = "security.cli.main:main"

[project.optional-dependencies]
dev = ["pytest"]
experiments = [
    "pandas",
    "pyarrow",
    "matplotlib",
    "scipy",
    "codecarbon",
    "scalene",
    "bandit",
    "semgrep",
    "ruff",
    "pylint",
    "radon",
]
providers = ["openai", "anthropic"]

[tool.setuptools.packages.find]
where = ["."]
include = ["security*", "sandbox*", "orchestrator*", "fixers*", "corpus*", "experiments*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
  "unit: fast unit tests",
  "integration: tests requiring external services",
  "slow: long-running tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "UP", "C4"]
exclude = ["data", "results", "dataset", ".venv", "vscode-extension"]
